[package]
name = "emblem-wasm"
description = "The Emblem compiler for wasm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
emblem = { git = "https://github.com/TheSignPainter98/emblem" }