[package]
name = "emblem-wasm"
description = "The Emblem compiler for wasm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/jf908/emblem-playground"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
emblem_core = { git = "https://github.com/TheSignPainter98/emblem", default-features = false }